# assertfunction

./: pyproject.toml
docs/: CNAME  index.html
src/assertfunction/core/: __init__.py
src/assertfunction/tests/: test_0.py
