[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0,<62",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "overloadable>=1.0.9,<2",
]
description = "This project provides a function that binds the assert command."
keywords = []
name = "assertfunction"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.0.3+local.3"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/assertfunction/#files"
Index = "https://pypi.org/project/assertfunction/"
Source = "https://github.com/johannes-programming/assertfunction/"
Website = "https://assertfunction.johannes-programming.online/"
